--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-icons/all-files": "^4.1.0",
     "framer-motion": "^4.1.16",
     "next": "10.2.0",
+    "particles-bg": "^2.5.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-emojione": "^5.0.1",
