--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3030",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start"
   },
@@ -18,6 +18,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-emojione": "^5.0.1",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-scrollspy": "^3.4.3",
+    "react-sticky-el": "^2.0.9"
   }
 }
