--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "myportfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 3001",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@chakra-ui/react": "^1.6.1",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@react-icons/all-files": "^4.1.0",
-    "framer-motion": "^4.1.16",
-    "next": "10.2.0",
-    "particles-bg": "^2.5.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-emojione": "^5.0.1",
-    "react-icons": "^4.2.0",
-    "react-scrollspy": "^3.4.3",
-    "react-sticky-el": "^2.0.9"
-  }
+   "homepage": "http://Temidayomichael.github.io/myPortfolio",
+   "name": "myportfolio",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev -p 3001",
+      "build": "next build",
+      "deploy": "gh-pages -d .next",
+      "start": "next start"
+   },
+   "dependencies": {
+      "@chakra-ui/react": "^1.6.1",
+      "@emotion/react": "^11.4.0",
+      "@emotion/styled": "^11.3.0",
+      "@react-icons/all-files": "^4.1.0",
+      "framer-motion": "^4.1.16",
+      "gh-pages": "^3.2.3",
+      "next": "10.2.0",
+      "particles-bg": "^2.5.5",
+      "react": "17.0.2",
+      "react-dom": "17.0.2",
+      "react-emojione": "^5.0.1",
+      "react-icons": "^4.2.0",
+      "react-scrollspy": "^3.4.3",
+      "react-sticky-el": "^2.0.9"
+   }
 }
