--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,20 @@
       "@emotion/react": "^11.4.0",
       "@emotion/styled": "^11.3.0",
       "@react-icons/all-files": "^4.1.0",
+      "@sendgrid/mail": "^7.6.2",
+      "axios": "^0.26.1",
+      "formik": "^2.2.9",
       "framer-motion": "^4.1.16",
       "gh-pages": "^3.2.3",
       "next": "10.2.0",
+      "node-mailjet": "^3.3.7",
       "particles-bg": "^2.5.5",
       "react": "17.0.2",
       "react-dom": "17.0.2",
       "react-emojione": "^5.0.1",
       "react-icons": "^4.2.0",
       "react-scrollspy": "^3.4.3",
-      "react-sticky-el": "^2.0.9"
+      "react-sticky-el": "^2.0.9",
+      "yup": "^0.32.11"
    }
 }
