--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "react": "17.0.2",
       "react-dom": "17.0.2",
       "react-emojione": "^5.0.1",
+      "react-figma-embed": "^1.0.1",
       "react-icons": "^4.2.0",
       "react-scrollspy": "^3.4.3",
       "react-sticky-el": "^2.0.9",
